# telegram_sticker_downloader

./: .dockerignore  .env  .eslintrc.js  .gitignore  Dockerfile  README.md  config.sample.json  docker-compose.yml  index.js  main.py  package.json  pyproject.toml  requirements.txt  test.webm  tgs2gif.py  webm2gif.py
